--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -14,12 +14,13 @@ layout: default
   {% endunless %}
 {% endif %}
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div id="main" role="main">
   {% include sidebar.html %}
 
   <article class="page" itemscope itemtype="http://schema.org/CreativeWork">
     {% if page.title %}<meta itemprop="headline" content="{{ page.title | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
-    {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date: "%B %d, %Y" }}">{% endif %}
     {% if page.modified %}<meta itemprop="dateModified" content="{{ page.modified | date: "%B %d, %Y" }}">{% endif %}
 
@@ -34,32 +35,38 @@ layout: default
           <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time></p>
         {% endif %}
         
-        {% if page.collection == 'teaching' %}
-          <p> {{ page.type }}, <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif page.venue and page.date %}
-          <p>Published in <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif page.date %}
-          <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
-        {% endif %}    
+        <p>
+          {% if page.authors %}
+            <i>{{page.authors}}</i> </br>
+          {% endif %}
+
+          {% if page.collection == 'teaching' %}
+            {{ page.type }}, <i>{{ page.venue }}</i>, {{ page.date}} </br>
+          {% elsif page.venue and page.date %}
+            Published in <i>{{ page.venue }}</i>, {{ page.date | date: "%Y" }} </br>
+          {% endif %}
+          {% if page.doi %}
+            DOI: <a href="{{ page.doi }}">{{ page.doi }}</a></br>
+          {% endif %}
+        </p>
         </header>
       {% endunless %}
 
       <section class="page__content" itemprop="text">
         {{ content }}
-
-        {% if page.citation and page.paperurl and page.slidesurl %}
-          <p style="font-size: smaller">Recommended citation: {{ page.citation }}<br /><a href="{{ page.paperurl }}">Download Paper</a> | <a href="{{ page.slidesurl }}">Download Slides</a></p>
-        {% elsif page.citation and page.paperurl %}
-          <p style="font-size: smaller">Recommended citation: {{ page.citation }}<br /><a href="{{ page.paperurl }}">Download Paper</a></p>
-        {% elsif page.citation and page.slidesurl %}
-          <p style="font-size: smaller">Recommended citation: {{ page.citation }}<br /><a href="{{ page.slidesurl }}">Download Slides</a></p>
-        {% elsif page.citation %}
-          <p style="font-size: smaller">Recommended citation: {{ page.citation }}</p>
-        {% elsif page.slidesurl %}
-          <p style="font-size: smaller"><a href="{{ page.slidesurl }}">Download Slides</a></p>
+        {% if page.collection == 'publications' %}
+          <p style="font-size: smaller">Citation: {{ page.authors }}. &quot;{{page.title}},&quot;, in <i>{{page.venue}}</i>. {{page.date | date: "%Y"}}.</p>
+        {% endif %}
+        {% if page.paperurl %}
+          <a style="font-size: smaller" href="{{ page.paperurl }}"> <i class="fa fa-file-alt"></i> Paper</a> &emsp;
+        {% endif %}
+        {% if page.codeurl %}
+          <a style="font-size: smaller" href="{{ page.codeurl }}"><i class="fa fa-github"></i> Code</a>
+        {% endif %}
+        {% if page.videourl %}
+          <a style="font-size: smaller" href="{{ page.videourl }}"><i class="fa fa-youtube-play"></i> Video</a>
         {% endif %}
 
-        {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
       <footer class="page__meta">
